2025.08.23 - 0.1.0
  - Added version and changelog
  - Added a spell checker
  - Fixed some typos