@@ -1,5 +1,6 @@
 !title !cowboy
 !contributor Matty5957
 !command cowboy
+!nomap
 
 **YEEHAW!**
