@@ -1,10 +1,13 @@
 !title Pearldle
 !contributor waarisdetaart
 
+
 During Hermitcraft season 10, Pearl decided to make a Minecraft version of the web-based word game Wordle. Because the game is located in her Dyes and Flowers shop, she called the game Dye-duction. Oli TheOrionSound likes playing Dye-duction with her on stream, and at some point he started calling it **Pearldle**. Pearl tried to keep the name Dye-duction in use, but eventually Pearldle became the more popular name. Chat plays Pearldle every week (when there is a stream) with Pearl via stream.
 
 == Spuddle ==
+!redirect Spuddle
 In March 2025 Pearl embarked on a trip to Sweden sponsored by Mojang themselves for Minecraft Live 2025. Because there would have been at least a week without streams, chat decided to play Pearldle with each other during the usual stream time. Because people in Pearl's chat are called spuds, this game has been called **spuddle**. 
 
 == Gluon ==
+!redirect Gluon
 On one fateful spuddle day, March 12 2025, Matty5957 had set a word that chat was really struggling with. At some point, a new offline chatter came in and asked for a recap. Matty5957 then very helpfully provided a recap by copy+pasting the words that had been guessed so far from a text file. The only problem: the answer was still at the top. The word was spoiled, and everyone found this very funny. The words "You'll never live this down" were said, and well, that was correct. Chat still pokes Matty sometimes by saying **gluon** to this day.
