@@ -1,4 +1,5 @@
 !title Credits
+!nomap
 !noedit
 
 This page contains the credits for anybody who has contributed to this wiki, either by writing an article or by making any of the resources used, unless they explicitly stated they did not want to be named.
