@@ -2,3 +2,6 @@
   - Added version and changelog
   - Added a spell checker
   - Fixed some typos
+  - Added article map in the right panel
+  - Added !nomap directive
+  - Added !redirect directive, only for articles, NOT for headings
